--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_title: "RemplaMatch - Le remplacement médical en toute simplicité"
-meta_description: "Description générique."
-meta_image: "image.jpg" # Une image dans votre dossier app/assets/images/
-twitter_account: "@nomdevotrecompte" # indispensable pour les Twitter Cards
+meta_description: "Simplifiez-vous la vie en trouvant votre remplacement ou remplaçant en quelques clics : généralistes, kinésithérapeuthes et toute autre profession médicale."
+meta_image: "logo_name.gif"
+twitter_account: "@AntoineLoron" # indispensable pour les Twitter Cards
